# recluse

./: .gitignore  CLA.md  Cargo.toml  Makefile  README.md  REUSE.toml  deny.toml  nfpm.yaml
.forgejo/workflows/: build.yml  cla.yml
.github/workflows/: build.yml  cla.yml
crates/base/: Cargo.toml
crates/base/src/: lib.rs  serde.rs
crates/repos/src/: lib.rs
crates/zorian/: Cargo.toml
crates/zorian/src/: config.rs  controller_backend.rs  controller_web.rs  main.rs
crates/zorian/src/assets/: manifest.webmanifest
pkg/: zorian.service  zorian.toml
pkg/scripts/: postinstall.sh  preremove.sh
src/: config.rs  controller_backend.rs  controller_web.rs  controller_zig.rs  index.html  main.rs  proxy.rs  service_storage.rs  storage.rs  telemetry.rs  upstream.rs  utils.rs  web.rs
src/assets/: base.css
src/backends/: go.rs  mod.rs  zig.rs
tests/smoke/: run-local.sh
xtask/: build.rs
xtask/src/: licenses.rs
