[package]
name = "zorian"
publish = false
edition = "2024"
version = "0.1.0"
license = "AGPL-3.0-or-later"
authors = ["Nikolay Govorov <me@govorov.online>"]
homepage = "https://pkg.earth"
repository = "https://github.com/mrdimidium/Zorian"

[dependencies]
axum = { version = "0.8", features = ["http2", "macros", "multipart"] }
axum-server = { version = "0.8", default-features = false, features = ["tls-rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
axum-extra = { version = "0.12", features = [
  "async-read-body",
  "attachment",
  "cached",
  "erased-json",
  "error-response",
  "file-stream",
  "form",
  "handler",
  "json-deserializer",
  "json-lines",
  "middleware",
  "multipart",
  "optional-path",
  "protobuf",
  "query",
  "routing",
  "tracing",
  "typed-header",
  "typed-routing",
  "with-rejection",
] }
bytes = "1.11"
chrono = { version = "0.4", features = ["serde"] }
crc32fast = "1.5"
hex = "0.4"
http-body-util = "0.1"
hyper = "1.8"
hyper-tls = "0.6"
hyper-util = { version = "0.1", features = ["full"] }
minijinja = "2.14"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = [
  "sqlite",
  "runtime-tokio",
  "macros",
  "derive",
  "chrono",
  "json",
] }
bytesize = { version = "2.3", features = ["serde"] }
thiserror = "2.0"
tokio = { version = "1.49", features = ["full"] }
toml = "0.9"
tower = { version = "0.5", features = ["full"] }
tower_governor = { version = "0.8", features = ["axum", "tracing"] }
tower-http = { version = "0.6", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2.5"
uuid = { version = "1.19", features = ["v4", "v5"] }

[dev-dependencies]
cargo-deny = "0.19"
cargo-llvm-cov = "0.6"
tempfile = "3.24"
url = "2.5"
