[package]
name = "zorian"
publish = false
edition = "2024"
version = "0.1.0"
license = "AGPL-3.0-or-later"
authors = ["Nikolay Govorov <me@govorov.online>"]
homepage = "https://pkg.earth"
repository = "https://github.com/mrdimidium/Zorian"

[dependencies]
async-trait = "0.1"
axum = { version = "0.8", features = ["http2", "macros", "multipart"] }
axum-extra = "0.12"
axum-server = { version = "0.8", features = ["tls-rustls-no-provider"] }
bytes = "1.11"
bytesize = { version = "2.3", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
crc32fast = "1.5"
futures = "0.3"
hex = "0.4"
http-body-util = "0.1"
hyper = "1.8"
hyper-tls = "0.6"
hyper-util = { version = "0.1", features = ["full"] }
maud = { version = "0.27", features = ["axum"] }
mime_guess = "2.0"
rust-embed = "8.11"
rustls = { version = "0.23", default-features = false, features = [
  "ring",
  "std",
  "tls12",
] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.27", features = ["derive"] }
sqlx = { version = "0.8", features = [
  "sqlite",
  "runtime-tokio",
  "macros",
  "derive",
  "chrono",
  "json",
] }
thiserror = "2.0"
tokio = { version = "1.49", features = ["full"] }
tokio-util = "0.7"
toml = "0.9"
tonic = "0.14"
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }
tower_governor = { version = "0.8", features = ["axum", "tracing"] }
url = { version = "2.5", features = ["serde"] }
uuid = { version = "1.19", features = ["v4", "v5"] }

# telemetry
opentelemetry = "0.31"
opentelemetry-appender-tracing = "0.31"
opentelemetry-otlp = { version = "0.31", features = [
  "grpc-tonic",
  "http-proto",
  "logs",
  "metrics",
  "trace",
  "tls",
  "tls-roots",
] }
opentelemetry-semantic-conventions = "0.31"
opentelemetry_sdk = { version = "0.31", features = [
  "rt-tokio",
  "logs",
  "metrics",
  "trace",
] }
tracing = "0.1"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[target.'cfg(target_os = "linux")'.dependencies]
sd-notify = { version = "0.4" }

[dev-dependencies]
cargo-deny = "0.19"
cargo-llvm-cov = "0.8"
proptest = "1.6"
tempfile = "3.24"
