# SPDX-FileCopyrightText: 2026 Nikolay Govorov <me@govorov.online>
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "base"
version = "0.0.0"
description = "Shared types and utilities"

authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
