# SPDX-FileCopyrightText: 2026 Nikolay Govorov <me@govorov.online>
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "zorian"
description = "Zorian web-server and daemon"
version.workspace = true

authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
base.workspace = true
repos.workspace = true

async-trait.workspace = true
axum.workspace = true
axum-server.workspace = true
bytes.workspace = true
bytesize.workspace = true
chrono.workspace = true
crc32fast.workspace = true
hex.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-tls.workspace = true
hyper-util.workspace = true
maud.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
tonic.workspace = true
tower.workspace = true
tower-http.workspace = true
tower_governor.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true

# telemetry
opentelemetry.workspace = true
opentelemetry-appender-tracing.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-semantic-conventions.workspace = true
opentelemetry_sdk.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
sd-notify.workspace = true

[build-dependencies]
xtask = { path = "../../xtask" }
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
